2014-12-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm: now hrules are drawn with
	semi-transparent LINE1

	* xmlconfig/defaults.xml: two new horizontal rules: warn-level,
	crit-level

2014-12-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: moved monitor-period and
	monitor-timeoffset from snmp-defs.xml

	* bin/monitor.in: new CLI option: --runalways

	* configs/torrus-config.pl: new configuration parameters:
	$Torrus::Collector::runAlways = 0;
	$Torrus::Monitor::runAlways = 0;

2014-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm: added support for
	CISCO-SYSTEM-EXT-MIB (mainly needed for Cisco Nexus)

2014-11-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Albis_ULAF.pm (discover):
	new discovery parameter: Albis_ULAF::mp-name-filter

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: support for Cisco Nexus;
	persistent ifIndex for Nexus

2014-10-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Fortinet.pm: new discovery module for
	Fortinet products

2014-10-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 2.08

2014-09-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Bugfix in discovery
	sequence. This bug was invisible up to perl v5.18.0. Now Perl
	randomizes hash keys on every loop.

2014-08-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RPC.pm: new RPC method: TIMESERIES

2014-07-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/UcdSnmp.pm: Loopback interfaces
	filtered out

2014-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC4293_IP_MIB.pm: New params:
	RFC4293_IP_MIB::tokenset-members,
	RFC4293_IP_MIB::ipv4-external-serviceid,